--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <div class="project-item">
                     <h3>Random sequential adsorption model for describing kinetics of photo-assisted adsorption of polyelectrolyte microcapsules on silicon substrates</h3>
                     <p class="years">апрель-май 2018</p>
-                    <p class="project-description">Это был мой второй проект в рамках стипендии G-RISC. В Саратове мне изготовили полиэлектролитные микрокапсулы без растворения ядер, что позволило мне доставить их в Потсдамских университет, где я провел серию экспериментов с их фотостимулированной адсорбцией на кремниевые подложки разной проводимости и при разном времени адсорбции. Затем коллеги получали снимки на электронном микроскопе, которые я обрабатывал.</p>
+                    <p class="project-description">Это был мой второй проект в рамках стипендии G-RISC. В Саратове мне изготовили полиэлектролитные микрокапсулы без растворения ядер, что позволило мне доставить их в Потсдамский университет, где я провел серию экспериментов с их фотостимулированной адсорбцией на кремниевые подложки разной проводимости и при разном времени адсорбции. Затем коллеги получали снимки на электронном микроскопе, которые я обрабатывал.</p>
                     <div class="project-tech">
                         <span class="tech-tag">Python</span>
                         <span class="tech-tag">SEM</span>
@@ -221,3 +221,4 @@
 </body>
 
 </html>
+
